# web-site

./: Cargo.toml  Dockerfile
.github/workflows/: release.yml
src/: app_ctx.rs  http_server.rs  main.rs
wwwroot/: Index.html
wwwroot/css/: site.css
